--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>webstudio</title>
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
             <a href="#">Студия</a>
           </li>
           <li>
-            <a href="#">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="#">Контакты</a>
