--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
         <ul>
           <li>
             <a href="./index.html">Студия</a>
@@ -41,7 +41,134 @@
         </li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <!--<h1>наши работы</h1>  -->
+
+      <section>
+        <!-- фильтры -->
+
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+
+        <!--примеры работы-->
+
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./image/img.jpg" alt="ноутбук" />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (1).jpg" alt="баскетболисты" />
+              <h2>Постер New Orlean vs Golden Stars</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (2).jpg" alt="логотип ресторана" />
+              <h2>Ресторан Seafood</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (3).jpg" alt="наушники" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (4).jpg" alt="две коробки" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (5).jpg" alt="монитор" />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (6).jpg" alt="книга" />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (7).jpg" alt="сувенир" />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./image/img (8).jpg" alt="ноутбук" />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="/">Web Studio</a>
 
