fixed images name

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./image/img.jpg" alt="ноутбук" />
+              <img src="./image/laptopimg.jpg" alt="ноутбук" />
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
               <p>
@@ -72,7 +72,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (1).jpg" alt="баскетболисты" />
+              <img src="./image/basketboll.jpg" alt="баскетболисты" />
               <h2>Постер New Orlean vs Golden Stars</h2>
               <p>Дизайн</p>
               <p>
@@ -84,7 +84,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (2).jpg" alt="логотип ресторана" />
+              <img src="./image/restaurant.jpg" alt="логотип ресторана" />
               <h2>Ресторан Seafood</h2>
               <p>Веб-сайт</p>
               <p>
@@ -96,7 +96,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (3).jpg" alt="наушники" />
+              <img src="./image/headphones.jpg" alt="наушники" />
               <h2>Проект Prime</h2>
               <p>Маркетинг</p>
               <p>
@@ -108,7 +108,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (4).jpg" alt="две коробки" />
+              <img src="./image/twoboxes.jpg" alt="две коробки" />
               <h2>Проект Boxes</h2>
               <p>Приложение</p>
               <p>
@@ -120,7 +120,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (5).jpg" alt="монитор" />
+              <img src="./image/imac.jpg" alt="монитор" />
               <h2>Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
               <p>
@@ -132,7 +132,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (6).jpg" alt="книга" />
+              <img src="./image/book.jpg" alt="книга" />
               <h2>Издание Limited Edition</h2>
               <p>Дизайн</p>
               <p>
@@ -144,7 +144,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (7).jpg" alt="сувенир" />
+              <img src="./image/label.jpg" alt="сувенир" />
               <h2>Проект LAB</h2>
               <p>Маркетинг</p>
               <p>
@@ -156,7 +156,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="./image/img (8).jpg" alt="ноутбук" />
+              <img src="./image/openlaptop.jpg" alt="ноутбук" />
               <h2>Growing Business</h2>
               <p>Приложение</p>
               <p>
