--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>webstudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">Web Studio</a>
+    <header class="page-header">
+      <nav class="site-nav">
+        <a href="./index.html" class="logo">Web Studio</a>
         <ul>
           <li>
-            <a href="#">Студия</a>
+            <a href="./index.html">Студия</a>
           </li>
           <li>
             <a href="./portfolio.html">Портфолио</a>
@@ -21,7 +21,7 @@
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contatcs">
         <li>
           <a href="mailto:info@devstudio.com">
             <img
