--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               alt="антенна"
             />
             <h3 class="section-title">Внимание к деталям</h3>
-            <p>
+            <p class="section-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -76,7 +76,7 @@
           <li>
             <img src="./image/clock1.svg" width="70" height="70" alt="часы" />
             <h3 class="section-title">Пунктуальность</h3>
-            <p>
+            <p class="section-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -89,7 +89,7 @@
               alt="ноутбук"
             />
             <h3 class="section-title">Планирование</h3>
-            <p>
+            <p class="section-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -102,7 +102,7 @@
               alt="космонавт"
             />
             <h3 class="section-title">Современные технологии</h3>
-            <p>
+            <p class="section-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -164,7 +164,7 @@
                 height="260"
                 alt="дизайнер Джон"
               />
-              <h3 class="section-title">John Smith</h3>
+              <h3 class="team-title">John Smith</h3>
               <p class="team-profession">Product Designer</p>
             </div>
             <ul class="team-link">
@@ -190,7 +190,7 @@
                 height="260"
                 alt="разработчик Марта"
               />
-              <h3 class="section-title">Marta Stewart</h3>
+              <h3 class="team-title">Marta Stewart</h3>
               <p class="team-profession">Frontend Developer</p>
             </div>
             <ul class="team-link">
@@ -216,7 +216,7 @@
                 height="260"
                 alt="маркетолог Роберт"
               />
-              <h3 class="section-title">Robert Jakis</h3>
+              <h3 class="team-title">Robert Jakis</h3>
               <p class="team-profession">Marketing</p>
             </div>
             <ul class="team-link">
@@ -242,7 +242,7 @@
                 height="260"
                 alt="дизайнер Мартин"
               />
-              <h3 class="section-title">Martin Doe</h3>
+              <h3 class="team-title">Martin Doe</h3>
               <p class="team-profession">UI Designer</p>
             </div>
             <ul class="team-link">
